BinarySearchTree/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.8.0_20\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\1570076\Google Drive\Adv Computer Science 2H - Nelson, David\BinarySearchTree
-d
C:\Users\1570076\Google Drive\Adv Computer Science 2H - Nelson, David\BinarySearchTree\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\1570076\Google Drive\Adv Computer Science 2H - Nelson, David\BinarySearchTree\BinarySearchTree.java
<---- end of javadoc command ---->
Loading source file C:\Users\1570076\Google Drive\Adv Computer Science 2H - Nelson, David\BinarySearchTree\BinarySearchTree.java...
C:\Users\1570076\Google Drive\Adv Computer Science 2H - Nelson, David\BinarySearchTree\BinarySearchTree.java:78: error: ';' expected
                    BinaryNode temp
                                   ^
1 error
